# grpc-chat

./: .env.example  Cargo.toml  Dockerfile  README.md  build.rs
proto/: chat.proto
src/: client.rs  data.rs  server.rs
